<resources>
    <string name="app_name">Quiz1</string>
    <string name="add_answer">Answer</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_zero">0</string>
    <string name="enter">SUBMIT</string>
    <string name="clear">CLEAR</string>
    <string name="title_activity_subtraction">SubtractionActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_multiplication">MultiplicationActivity</string>
</resources>
