<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<RelativeLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/num1"
            android:orientation="vertical"/>

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:id="@+id/timer"
            android:orientation="vertical"/>
    <ImageView
        android:layout_width="34dp"
        android:layout_height="44dp"
        app:srcCompat="@drawable/plus"
        android:id="@+id/imageView"
        android:adjustViewBounds="false"
        android:layout_below="@+id/num1"
        />

    <TextView
        android:text="TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/num2"
        android:orientation="vertical"
        android:layout_below="@+id/imageView"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Answer : Use Keyboard"
        android:textSize="25dp"
        android:id="@+id/answer"
        android:layout_below="@+id/num2"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/answer"

        >
        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:divider="@android:color/darker_gray"
                android:gravity="center"
                >
                <Button
                    android:id="@+id/one"
                    style="@style/key"
                    android:text="@string/number_one"/>

                <Button
                    android:id="@+id/two"
                    style="@style/key"

                    android:text="@string/number_two"/>

                <Button
                    android:id="@+id/three"
                    style="@style/key"
                    android:text="@string/number_three"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:divider="@android:color/darker_gray"
                android:gravity="center">

                <Button
                    android:id="@+id/four"
                    style="@style/key"
                    android:text="@string/number_four"/>

                <Button
                    android:id="@+id/five"
                    style="@style/key"
                    android:text="@string/number_five"/>

                <Button
                    android:id="@+id/six"
                    style="@style/key"
                    android:text="@string/number_six"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:divider="@android:color/darker_gray"
                android:gravity="center"
                android:showDividers="middle" >

                <Button
                    android:id="@+id/seven"
                    style="@style/key"
                    android:text="@string/number_seven"/>

                <Button
                    android:id="@+id/eight"
                    style="@style/key"
                    android:text="@string/number_eight"/>

                <Button
                    android:id="@+id/nine"
                    style="@style/key"
                    android:text="@string/number_nine"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:divider="@android:color/darker_gray"
                android:gravity="center"
                android:showDividers="middle" >
                <Button
                    android:id="@+id/clear"
                    style="@style/key"
                    android:text="@string/clear"/>
                <Button
                    android:id="@+id/zero"
                    style="@style/key"
                    android:text="@string/number_zero"/>

            </TableRow>
        </TableLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="20dp"
            android:layout_below="@+id/table"
            android:layout_alignParentRight="true"
            android:id="@+id/gap"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/key"
            android:layout_below="@+id/gap"
            android:layout_alignParentBottom="true"
            android:text="@string/enter"
            android:id="@+id/enter"/>
    </RelativeLayout>
</RelativeLayout>
    </RelativeLayout>
</ScrollView>