<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.sjsu.quiz1.SubtractFragment"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:textSize="30dp"
                android:layout_height="wrap_content"
                android:id="@+id/num1"
                android:orientation="vertical"/>

            <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:id="@+id/timer"
                android:textColor="@color/colorPrimaryDark"
                android:orientation="vertical"/>


            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:id="@+id/num2"
                android:orientation="vertical"
                android:layout_below="@+id/num1"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="_________"
                android:textSize="35dp"
                android:id="@+id/line"
                android:textColor="@color/colorPrimaryDark"
                android:layout_below="@+id/num2"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="35dp"
                android:id="@+id/answer"
                android:textColor="@color/colorPrimaryDark"
                android:layout_below="@+id/line"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gap"
                android:layout_alignParentRight="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30dp"
                android:layout_below="@+id/num2"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/answer"

                >
                <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/table"
                    android:layout_above="@+id/enter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_alignParentBottom="true"
                    >

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:divider="@android:color/holo_blue_light"
                        android:gravity="center"
                        >
                        <Button
                            android:id="@+id/one"
                            style="@style/key"
                            android:text="@string/number_one"/>

                        <Button
                            android:id="@+id/two"
                            style="@style/key"
                            android:text="@string/number_two"/>

                        <Button
                            android:id="@+id/three"
                            style="@style/key"
                            android:text="@string/number_three"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:divider="@android:color/holo_blue_light"
                        android:gravity="center">

                        <Button
                            android:id="@+id/four"
                            style="@style/key"
                            android:text="@string/number_four"/>

                        <Button
                            android:id="@+id/five"
                            style="@style/key"
                            android:text="@string/number_five"/>

                        <Button
                            android:id="@+id/six"
                            style="@style/key"
                            android:text="@string/number_six"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:divider="@android:color/holo_blue_light"
                        android:gravity="center"
                        android:showDividers="middle" >

                        <Button
                            android:id="@+id/seven"
                            style="@style/key"
                            android:text="@string/number_seven"/>

                        <Button
                            android:id="@+id/eight"
                            style="@style/key"
                            android:text="@string/number_eight"/>

                        <Button
                            android:id="@+id/nine"
                            style="@style/key"
                            android:text="@string/number_nine"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:divider="@android:color/holo_blue_light"
                        android:gravity="center"
                        android:showDividers="middle" >
                        <Button
                            android:id="@+id/clear"
                            style="@style/key"
                            android:text=""/>
                        <Button
                            android:id="@+id/zero"
                            style="@style/key"
                            android:text="@string/number_zero"/>
                        <Button
                            android:id="@+id/clear2"
                            style="@style/key"
                            android:text=""/>

                    </TableRow>
                </TableLayout>


            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
